--- a/SA/MainPage.xaml
+++ b/SA/MainPage.xaml
@@ -4,71 +4,17 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="SA.MainPage"
-             BackgroundColor="DarkBlue">
+             x:Class="SA.MainPage">
 
-        <!-- // Set a grid with heigt and width -->
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="50"/>
-        </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
+    <StackLayout>
         <!-- Place new controls here -->
-        <!--GRID ROW 0-->
-        <Label
-            Text="Stemwijzer" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"
-            Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="5" TextColor="White"
-        />
-        <!--GRID ROW 1-->
-        <Image 
-            Source=""
-            Grid.Row="1" Grid.Column="1"
-            />
-        <Image
-            Source=""
-            Grid.Row="1" Grid.Column="3"
-            />
-        <!--GRID ROW 2-->
-        <!-- Put a function to check off the checkbox is checked CheckedChanged=""  -->
-        <Image 
-            Source=""
-            Grid.Row="2" Grid.Column="1"
-            />
-        <Image 
-            Source=""
-            Grid.Row="2" Grid.Column="3"
-            />
-        <!--GRID ROW 3-->
-        <CheckBox
-            Grid.Row="3" Grid.ColumnSpan="1" HorizontalOptions="Center" Color="White"
-        />
-
-        <Label 
-            Text="Ik ben 18 jaar of ouder."
-            HorizontalOptions="Center"  VerticalOptions="Center"
-            Grid.Row="3"  Grid.ColumnSpan="3" Grid.Column="1" TextColor="White"
-            />
-            
-        <!--GRID ROW 4-->
+        <Label Text="Welcome to Stemwijzer version1" 
+           HorizontalOptions="Center"
+           VerticalOptions="CenterAndExpand" />
         <Button
-            Text="Start"  Clicked="Button_Clicked"
-            Grid.Column="2" Grid.Row="4"  Grid.ColumnSpan="1" BackgroundColor="Green"
-            CornerRadius="25"
+            Text="start"
+            Clicked="Button_Clicked"
         />
-
-    </Grid>
-
+    </StackLayout>
 
 </ContentPage>
-
