--- a/SA/MainPage.xaml
+++ b/SA/MainPage.xaml
@@ -72,7 +72,7 @@
 
         <!--GRID ROW 4-->
         <Button
-            Text="Start"  Clicked="Button_Clicked"
+            Text="Start"  
             Grid.Column="2" Grid.Row="4"  Grid.ColumnSpan="1" BackgroundColor="#6CB419"
             CornerRadius="25"
         />
