--- a/SA/Views/QuestionView.xaml
+++ b/SA/Views/QuestionView.xaml
@@ -5,11 +5,32 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              x:Class="SA.Views.QuestionView.QuestionView">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <Label Text="Question" Grid.Row="0"  Grid.ColumnSpan="3" Grid.Column="2" x:Name="Stand"/>
+
+        <Button Text="Eens"  Grid.Row="1" Grid.ColumnSpan="3" Grid.Column="1" Clicked="SaveAnswer"/>
+        <Button Text="Helemaal eens"   Grid.Row="2" Grid.ColumnSpan="3" Grid.Column="1"  Clicked="SaveAnswer"/>
+        <Button Text="Oneens"    Grid.Row="3" Grid.ColumnSpan="3" Grid.Column="1"  Clicked="SaveAnswer"/>
+        <Button Text="Helemaal oneens"   Grid.Row="4" Grid.ColumnSpan="3" Grid.Column="1"  Clicked="SaveAnswer"/>
+
+        <Button Text="vorige"    Grid.Row="5" Grid.ColumnSpan="1" Grid.Column="1" Clicked="ViewPreviousQuestion"/>
+        <Button Text="volgende"   Grid.Row="5" Grid.ColumnSpan="1" Grid.Column="3" Clicked="ViewNextQuestion"/>
+
+    </Grid>
 </ContentPage>
