--- a/SA/MainPage.xaml
+++ b/SA/MainPage.xaml
@@ -42,30 +42,30 @@
         />
         <!--GRID ROW 1-->
         <Image 
-            Source="./Images/cda.png"
+            Source="https://upload.wikimedia.org/wikipedia/commons/3/38/FvD.png"
             Grid.Row="1" Grid.Column="1"
             />
         <Image
-            Source="./Images/pvda.png"
+            Source="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b0/CDA_logo.svg/1200px-CDA_logo.svg.png"
             Grid.Row="1" Grid.Column="3"
             />
         <!--GRID ROW 2-->
         <!-- Put a function to check off the checkbox is checked CheckedChanged=""  -->
         <Image 
-            Source="Images/groenlinks.png"
+            Source="https://upload.wikimedia.org/wikipedia/commons/thumb/4/42/GROENLINKS-LOGO-COMPACT-RGB_%281%29.png/1200px-GROENLINKS-LOGO-COMPACT-RGB_%281%29.png"
             Grid.Row="2" Grid.Column="1"
             />
         <Image 
-            Source="Images/fvd.png"
+            Source="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6f/PvdA_Logo_small.svg/1200px-PvdA_Logo_small.svg.png"
             Grid.Row="2" Grid.Column="3"
             />
         <!--GRID ROW 3-->
         <CheckBox
-            Grid.Row="3" Grid.ColumnSpan="1" HorizontalOptions="Center" Color="White" 
+            Grid.Row="3" Grid.ColumnSpan="1" HorizontalOptions="Center" Color="White" CheckedChanged="OnCheck"
         />
 
         <Label 
-            Text="Ik ben 18 jaar of ouder."
+            Text="Ik ben 16 jaar of ouder."
             HorizontalOptions="Center"  VerticalOptions="Center"
             Grid.Row="3"  Grid.ColumnSpan="3" Grid.Column="1" TextColor="White" 
             />
@@ -75,6 +75,7 @@
             Text="Start"  
             Grid.Column="2" Grid.Row="4"  Grid.ColumnSpan="1" BackgroundColor="#6CB419"
             CornerRadius="25"
+            Clicked="Button_Clicked"
         />
 
     </Grid>
