--- a/SA/Views/MailView.xaml
+++ b/SA/Views/MailView.xaml
@@ -4,12 +4,18 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="SA.Views.MailView">
+             x:Class="SA.Views.MailView"
+             BackgroundColor="#4269C3">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+        <StackLayout Spacing="10" x:Name="layout">
+            <StackLayout Orientation="Horizontal">
+                <Image Source=""/>
+                <Button Text="Terug"   BackgroundColor="PowderBlue" VerticalOptions="Start" HorizontalOptions="FillAndExpand" TextColor="White" Opacity="50" FontFamily="Malgun Gothic"/>
+            </StackLayout>
+                <Label Text="Advies via email" HorizontalOptions="Center" VerticalOptions="Start" TextColor="white" Opacity="50" FontFamily="Malgun Gothic" FontSize="20"/>
+                <Label Text="Wij versturen hier uw resultaten naar uw email." HorizontalOptions="CenterAndExpand" Margin="20,200,0,0" TextColor="White" Opacity="50" FontFamily="Malgun Gothic" FontSize="20"/>
+                <Entry Placeholder="Vul uw email-adres hier in." HorizontalOptions="CenterAndExpand" BackgroundColor="PowderBlue" VerticalOptions="End" HorizontalTextAlignment="Center" Margin="0" FontFamily="Malgun Gothic"/>
+            <Button Text="Verzenden" BackgroundColor="#6CB419" CornerRadius="25" HorizontalOptions="Center" VerticalOptions="EndAndExpand" Padding="100,0" Margin="0,0,0,200" FontFamily="Malgun Gothic"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
