--- a/SA/Views/QuestionView.xaml
+++ b/SA/Views/QuestionView.xaml
@@ -4,7 +4,8 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="SA.Views.QuestionView.QuestionView">
+             x:Class="SA.Views.QuestionView.QuestionView"
+             >
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
@@ -24,10 +25,27 @@
 
         <Label Text="Question" Grid.Row="0"  Grid.ColumnSpan="3" Grid.Column="2" x:Name="Stand"/>
 
-        <Button Text="Eens"  Grid.Row="1" Grid.ColumnSpan="3" Grid.Column="1" Clicked="SaveAnswer"/>
-        <Button Text="Helemaal eens"   Grid.Row="2" Grid.ColumnSpan="3" Grid.Column="1"  Clicked="SaveAnswer"/>
-        <Button Text="Oneens"    Grid.Row="3" Grid.ColumnSpan="3" Grid.Column="1"  Clicked="SaveAnswer"/>
-        <Button Text="Helemaal oneens"   Grid.Row="4" Grid.ColumnSpan="3" Grid.Column="1"  Clicked="SaveAnswer"/>
+        <Button 
+            Text="Eens" 
+            Grid.Row="1" 
+            Grid.ColumnSpan="3" 
+            Grid.Column="1" 
+            Clicked="SaveAnswer" 
+            x:Name="eens_pnt"
+            BorderWidth="2"
+            BorderRadius="5"
+            BorderColor="#000000"
+        />
+        <Button    BorderWidth="2"
+            BorderRadius="5"
+            BorderColor="#000000" Text="Helemaal eens"   Grid.Row="2" Grid.ColumnSpan="3" Grid.Column="1"  Clicked="SaveAnswer" x:Name="hlm_eens_pnt"/>
+        <Button    BorderWidth="2"
+            BorderRadius="5"
+            BorderColor="#000000"
+                   Text="Oneens"    Grid.Row="3" Grid.ColumnSpan="3" Grid.Column="1"  Clicked="SaveAnswer" x:Name="oneens_pnt"/>
+        <Button    BorderWidth="2"
+            BorderRadius="5"
+            BorderColor="#000000" Text="Helemaal oneens"   Grid.Row="4" Grid.ColumnSpan="3" Grid.Column="1"  Clicked="SaveAnswer" x:Name="hlm_oneens_pnt"/>
 
         <Button Text="vorige"    Grid.Row="5" Grid.ColumnSpan="1" Grid.Column="1" Clicked="ViewPreviousQuestion"/>
         <Button Text="volgende"   Grid.Row="5" Grid.ColumnSpan="1" Grid.Column="3" Clicked="ViewNextQuestion"/>
