--- a/SA/MainPage.xaml
+++ b/SA/MainPage.xaml
@@ -19,6 +19,7 @@
     <!-- // Set a grid with heigt and width -->
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="50"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
@@ -45,24 +46,24 @@
         <!--GRID ROW 1-->
         <Image 
             Source="{local:ImageResource ResourceID=SA.Images.fvd.png}"
-            Grid.Row="0" Grid.Column="1"
+            Grid.Row="1" Grid.Column="1" Scale="2"
             />
         <Image
             Source="{local:ImageResource ResourceID=SA.Images.cda.png}"
-            Grid.Row="0" Grid.Column="3"
+            Grid.Row="1" Grid.Column="3" Scale="1.3"
             />
         <!--GRID ROW 2-->
         <!-- Put a function to check off the checkbox is checked CheckedChanged=""  -->
         <Image 
             Source="{local:ImageResource ResourceID=SA.Images.groenlinks.png}"
-            Grid.Row="1" Grid.Column="1"
+            Grid.Row="3" Grid.Column="1" Scale="2"
             />
         <Image 
             Source="{local:ImageResource ResourceID=SA.Images.pvda.png}"
-            Grid.Row="1" Grid.Column="3"
+            Grid.Row="3" Grid.Column="3" Scale="2.1"
             />
         <!--GRID ROW 3-->
-        <StackLayout Grid.Row="4" Grid.ColumnSpan="5" HorizontalOptions="Center" Orientation="Horizontal">
+        <StackLayout Grid.Row="5" Grid.ColumnSpan="5" HorizontalOptions="Center" Orientation="Horizontal">
             <CheckBox
                 Color="White" CheckedChanged="OnCheck"
             />
@@ -75,8 +76,8 @@
             
         </StackLayout>
         <!--GRID ROW 4-->
-        <StackLayout Grid.Row="5" Grid.ColumnSpan="5" HorizontalOptions="Center" Orientation="Horizontal">
-            <Button Text="Start" Grid.Column="2" Grid.Row="1"  Grid.ColumnSpan="3" BackgroundColor="#6CB419" 
+        <StackLayout Grid.Row="6" Grid.ColumnSpan="5" HorizontalOptions="Center" Orientation="Horizontal">
+            <Button Text="Start" Grid.Column="2" Grid.Row="2"  Grid.ColumnSpan="3" BackgroundColor="#6CB419" 
                         CornerRadius="10" Clicked="Button_Clicked"
                 />
 
