--- a/SA/Views/MailView.xaml
+++ b/SA/Views/MailView.xaml
@@ -5,7 +5,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              x:Class="SA.Views.MailView"
-             BackgroundColor="#4269C3">
+             BackgroundColor="#4269C3"
+             NavigationPage.HasNavigationBar="false">
+
     <ContentPage.Content>
         <StackLayout Spacing="10" x:Name="layout">
             <StackLayout Orientation="Horizontal">
