--- a/SA/Views/ResultsView.xaml
+++ b/SA/Views/ResultsView.xaml
@@ -13,58 +13,58 @@
                     <Label Text="Op basis van uw antwoorden" VerticalOptions="Start" HorizontalOptions="Center" TextColor="White" Opacity="50" FontFamily="Malgun Gothic" FontSize="20" Margin="0,50,0,0"/>
 
             <StackLayout Orientation="Vertical">
-                <Label Text="Match" HorizontalOptions="Start" Margin="0,0,20,0"></Label>
+                <Label x:Name="Partij1_percentage" Text="Match percentage: " HorizontalOptions="Start" Margin="0,0,20,0"></Label>
                 <ProgressBar Margin="0,0,20,0"></ProgressBar>
             </StackLayout>
 
             <StackLayout Orientation="Horizontal">
-                        <Label Text="Uw beste keuze" HorizontalOptions="StartAndExpand" Margin="20,0,0,0"/>
-                    <Label x:Name="Partij1_name" Text="Partij1" HorizontalOptions="End" Margin="0,0,20,0"></Label>
-                    </StackLayout>
-                    <StackLayout Orientation="Horizontal">
-                        <Label x:Name="Partij1_abbreviation" Text="Partij: " HorizontalOptions="StartAndExpand" Margin="20,0,0,0"/>
-                        <Label x:Name="Partij1_leader" Text="Partijleider: " HorizontalOptions="End" Margin="0,0,20,0"></Label>
-                    </StackLayout>
-                    <StackLayout Orientation="Horizontal">
-                             <Image Source="" HorizontalOptions="StartAndExpand" Margin="20,0,0,0"/>
-                        <StackLayout Orientation="Vertical">
-                            <Label x:Name="Partij1_parlement_chairs" Text="Zetels tweedekamer: " HorizontalOptions="End" Margin="0,0,20,0"></Label>
-                            <Label x:Name="Partij1_senatechairs" Text="Zetels eerstekamer: " HorizontalOptions="End" Margin="0,0,20,0"></Label>
-                        </StackLayout>
-                    </StackLayout>
+                <Label Text="Uw beste keuze" HorizontalOptions="StartAndExpand" Margin="20,0,0,0"/>
+                <Label x:Name="Partij1_name" Text="Partij1" HorizontalOptions="End" Margin="0,0,20,0"></Label>
+            </StackLayout>
+            <StackLayout Orientation="Horizontal">
+                <Label x:Name="Partij1_abbreviation" Text="Partij: " HorizontalOptions="StartAndExpand" Margin="20,0,0,0"/>
+                <Label x:Name="Partij1_leader" Text="Partijleider: " HorizontalOptions="End" Margin="0,0,20,0"></Label>
+            </StackLayout>
+            <StackLayout Orientation="Horizontal">
+                <Image Source="" HorizontalOptions="StartAndExpand" Margin="20,0,0,0"/>
                 <StackLayout Orientation="Vertical">
-                    <Label Text="Match" HorizontalOptions="Start" Margin="0,0,20,0"></Label>
-                    <ProgressBar Margin="0,0,20,0"></ProgressBar>
+                    <Label x:Name="Partij1_parlement_chairs" Text="Zetels tweedekamer: " HorizontalOptions="End" Margin="0,0,20,0"></Label>
+                    <Label x:Name="Partij1_senatechairs" Text="Zetels eerstekamer: " HorizontalOptions="End" Margin="0,0,20,0"></Label>
                 </StackLayout>
-                    
-                <StackLayout Orientation="Horizontal">
-                    <Label Text="2de: " HorizontalOptions="StartAndExpand" Margin="20,0,0,0"/>
-                    <Label x:Name="Partij2_name" Text="Partij2" HorizontalOptions="End" Margin="0,0,20,0"></Label>
-                </StackLayout>
-                <StackLayout Orientation="Horizontal">
-                    <Label x:Name="Partij2_abbreviation" Text="Partij: " HorizontalOptions="StartAndExpand" Margin="20,0,0,0"/>
-                    <Label x:Name="Partij2_leader" Text="Partijleider: " HorizontalOptions="End" Margin="0,0,20,0"></Label>
-                </StackLayout>
-                <StackLayout Orientation="Horizontal">
-                            <Image Source="" HorizontalOptions="StartAndExpand" Margin="20,0,0,0"/>
-                    <StackLayout Orientation="Vertical">
-                        <Label x:Name="Partij2_parlement_chairs" Text="Zetels tweedekamer: " HorizontalOptions="End" Margin="0,0,20,0"></Label>
-                        <Label x:Name="Partij2_senatechairs" Text="Zetels eerstekamer: " HorizontalOptions="End" Margin="0,0,20,0"></Label>
-                    </StackLayout>
-                </StackLayout>
+            </StackLayout>
             <StackLayout Orientation="Vertical">
-                <Label Text="Match" HorizontalOptions="Start" Margin="0,0,20,0"></Label>
+                <Label x:Name="Partij2_percentage" Text="Match percentage: " HorizontalOptions="Start" Margin="0,0,20,0"></Label>
+                <ProgressBar Margin="0,0,20,0"></ProgressBar>
+            </StackLayout>
+
+            <StackLayout Orientation="Horizontal">
+                <Label Text="2de: " HorizontalOptions="StartAndExpand" Margin="20,0,0,0"/>
+                <Label x:Name="Partij2_name" Text="Partij2" HorizontalOptions="End" Margin="0,0,20,0"></Label>
+            </StackLayout>
+            <StackLayout Orientation="Horizontal">
+                <Label x:Name="Partij2_abbreviation" Text="Partij: " HorizontalOptions="StartAndExpand" Margin="20,0,0,0"/>
+                <Label x:Name="Partij2_leader" Text="Partijleider: " HorizontalOptions="End" Margin="0,0,20,0"></Label>
+            </StackLayout>
+            <StackLayout Orientation="Horizontal">
+                <Image Source="" HorizontalOptions="StartAndExpand" Margin="20,0,0,0"/>
+                <StackLayout Orientation="Vertical">
+                    <Label x:Name="Partij2_parlement_chairs" Text="Zetels tweedekamer: " HorizontalOptions="End" Margin="0,0,20,0"></Label>
+                    <Label x:Name="Partij2_senatechairs" Text="Zetels eerstekamer: " HorizontalOptions="End" Margin="0,0,20,0"></Label>
+                </StackLayout>
+            </StackLayout>
+            <StackLayout Orientation="Vertical">
+                <Label x:Name="Partij3_percentage" Text="Match percentage: " HorizontalOptions="Start" Margin="0,0,20,0"></Label>
                 <ProgressBar Margin="0,0,20,0"></ProgressBar>
             </StackLayout>
                     
             <StackLayout Orientation="Horizontal">
-                    <Label Text="3de: " HorizontalOptions="StartAndExpand" Margin="20,0,0,0"/>
-                    <Label x:Name="Partij3_name" Text="Partij3" HorizontalOptions="End" Margin="0,0,20,0"></Label>
-                </StackLayout>
-                <StackLayout Orientation="Horizontal">
-                    <Label x:Name="Partij3_abbreviation" Text="Partij: " HorizontalOptions="StartAndExpand" Margin="20,0,0,0"/>
-                    <Label x:Name="Partij3_leader" Text="Partijleider: " HorizontalOptions="End" Margin="0,0,20,0"></Label>
-                </StackLayout>
+                <Label Text="3de: " HorizontalOptions="StartAndExpand" Margin="20,0,0,0"/>
+                <Label x:Name="Partij3_name" Text="Partij3" HorizontalOptions="End" Margin="0,0,20,0"></Label>
+            </StackLayout>
+            <StackLayout Orientation="Horizontal">
+                <Label x:Name="Partij3_abbreviation" Text="Partij: " HorizontalOptions="StartAndExpand" Margin="20,0,0,0"/>
+                <Label x:Name="Partij3_leader" Text="Partijleider: " HorizontalOptions="End" Margin="0,0,20,0"></Label>
+            </StackLayout>
             <StackLayout Orientation="Horizontal">
                 <Image Source="" HorizontalOptions="StartAndExpand" Margin="20,0,0,0"/>
                 <StackLayout Orientation="Vertical">
