--- a/SA/Views/MailView.xaml
+++ b/SA/Views/MailView.xaml
@@ -12,7 +12,7 @@
         <StackLayout Spacing="10" x:Name="layout">
             <StackLayout Orientation="Horizontal">
                 <Image Source=""/>
-                <Button Text="Terug"   BackgroundColor="PowderBlue" VerticalOptions="Start" HorizontalOptions="FillAndExpand" TextColor="White" Opacity="50" FontFamily="Malgun Gothic"/>
+                <Button Text="Terug" x:Name="Back"  BackgroundColor="PowderBlue" VerticalOptions="Start" HorizontalOptions="FillAndExpand" TextColor="White" Opacity="50" FontFamily="Malgun Gothic"/>
             </StackLayout>
                 <Label Text="Advies via email" HorizontalOptions="Center" VerticalOptions="Start" TextColor="white" Opacity="50" FontFamily="Malgun Gothic" FontSize="20"/>
                 <Label Text="Wij versturen hier uw resultaten naar uw email." HorizontalOptions="CenterAndExpand" Margin="20,200,0,0" TextColor="White" Opacity="50" FontFamily="Malgun Gothic" FontSize="20"/>
