--- a/SA/MainPage.xaml
+++ b/SA/MainPage.xaml
@@ -64,21 +64,21 @@
                 />
         <!--GRID ROW 1-->
         <Image 
-            Source="{local:ImageResource ResourceID=SA.Images.FvD.png}"
+            Source="{local:ImageResource ResourceID=SA.Images.fvd.png}"
             Grid.Row="3" Grid.Column="1" Scale="2"
             />
         <Image
-            Source="{local:ImageResource ResourceID=SA.Images.CDA.png}"
+            Source="{local:ImageResource ResourceID=SA.Images.cda.png}"
             Grid.Row="3" Grid.Column="4" Scale="1.3"
             />
         <!--GRID ROW 2-->
         <!-- Put a function to check off the checkbox is checked CheckedChanged=""  -->
         <Image 
-            Source="{local:ImageResource ResourceID=SA.Images.GL.png}"
+            Source="{local:ImageResource ResourceID=SA.Images.groenlinks.png}"
             Grid.Row="5" Grid.Column="1" Scale="2"
             />
         <Image 
-            Source="{local:ImageResource ResourceID=SA.Images.PvdA.png}"
+            Source="{local:ImageResource ResourceID=SA.Images.pvda.png}"
             Grid.Row="5" Grid.Column="4" Scale="2.1"
             />
         <!--GRID ROW 3-->
