Commit changes to progress bar

--- a/SA/Views/ResultsView.xaml
+++ b/SA/Views/ResultsView.xaml
@@ -14,8 +14,6 @@
         <StackLayout >
                     <Label Text="Op basis van uw antwoorden" VerticalOptions="Start" HorizontalOptions="Center" TextColor="White" Opacity="50" FontFamily="Malgun Gothic" FontSize="20" Margin="0,50,0,0"/>
 
-            
-
             <StackLayout Orientation="Horizontal">
                 <Label Text="Uw beste keuze" TextColor="White" HorizontalOptions="StartAndExpand" Margin="20,0,0,0"/>
                 <Label x:Name="Partij1_name" TextColor="White" Text="Partij1" HorizontalOptions="End" Margin="0,0,20,0"></Label>
@@ -32,8 +30,8 @@
                 </StackLayout>
             </StackLayout>
             <StackLayout Orientation="Vertical">
-                <Label x:Name="Partij1_percentage" Text="Match percentage: " TextColor="White" HorizontalOptions="Start" Margin="20,0,20,0"></Label>
-                <ProgressBar Margin="0,0,20,0"></ProgressBar>
+                <Label x:Name="Partij1_percentage_txt" Text="Match percentage: " TextColor="White" HorizontalOptions="Start" Margin="20,0,20,0"></Label>
+                <ProgressBar x:Name="Partij1_percentage"  ProgressColor="Green" Margin="0,0,20,0"></ProgressBar>
             </StackLayout>
 
             <StackLayout Orientation="Horizontal">
@@ -52,8 +50,8 @@
                 </StackLayout>
             </StackLayout>
             <StackLayout Orientation="Vertical">
-                <Label x:Name="Partij2_percentage" TextColor="White" Text="Match percentage: " HorizontalOptions="Start" Margin="20,0,20,0"></Label>
-                <ProgressBar Margin="0,0,20,0"></ProgressBar>
+                <Label x:Name="Partij2_percentage_txt" TextColor="White" Text="Match percentage: " HorizontalOptions="Start" Margin="20,0,20,0"></Label>
+                <ProgressBar x:Name="Partij2_percentage" ProgressColor="Green" Margin="0,0,20,0"></ProgressBar>
             </StackLayout>
                     
             <StackLayout Orientation="Horizontal">
@@ -73,8 +71,8 @@
             </StackLayout>
 
             <StackLayout Orientation="Vertical">
-                <Label x:Name="Partij3_percentage" TextColor="White" Text="Match percentage: " HorizontalOptions="Start" Margin="20,0,20,0"></Label>
-                <ProgressBar Margin="0,0,20,0"></ProgressBar>
+                <Label x:Name="Partij3_percentage_txt" TextColor="White" Text="Match percentage: " HorizontalOptions="Start" Margin="20,0,20,0"></Label>
+                <ProgressBar x:Name="Partij3_percentage" ProgressColor="Green" Margin="0,0,20,0"></ProgressBar>
             </StackLayout>
 
             <StackLayout Orientation="Horizontal" VerticalOptions="EndAndExpand">
