--- a/SA/MainPage.xaml
+++ b/SA/MainPage.xaml
@@ -88,7 +88,7 @@
         </StackLayout>
         <!--GRID ROW 4-->
         <StackLayout Grid.Row="8" Grid.ColumnSpan="6" HorizontalOptions="Center" Orientation="Horizontal">
-            <Button Text="Start" Grid.Column="3" Grid.Row="4"  Grid.ColumnSpan="3" BackgroundColor="#6CB419" 
+            <Button BorderColor="Black" BorderWidth="1" Text="Start" Grid.Column="3" Grid.Row="4"  Grid.ColumnSpan="3" BackgroundColor="#6CB419" 
                         CornerRadius="10" Clicked="Button_Clicked"
                 />
 
