--- a/SA/Views/MailView.xaml
+++ b/SA/Views/MailView.xaml
@@ -10,14 +10,13 @@
 
     <ContentPage.Content>
         <StackLayout Spacing="10" x:Name="layout">
-            <StackLayout Orientation="Horizontal">
-                <Image Source=""/>
-                <Button Text="Terug" x:Name="Back"  BackgroundColor="PowderBlue" VerticalOptions="Start" HorizontalOptions="FillAndExpand" TextColor="White" Opacity="50" FontFamily="Malgun Gothic"/>
+            <StackLayout Orientation="Vertical">
+                <Label Text="Advies via email" HorizontalOptions="CenterAndExpand" VerticalOptions="StartAndExpand" TextColor="white" Opacity="50" FontFamily="Malgun Gothic" FontSize="20" Margin="0,50,0,0"/>
+                <Label Text="Wij versturen hier uw resultaten naar uw email." HorizontalOptions="CenterAndExpand" Margin="20,200,0,0" TextColor="White" Opacity="50" FontFamily="Malgun Gothic" FontSize="20"/>
             </StackLayout>
-            <Label Text="Advies via email" HorizontalOptions="Center" VerticalOptions="Start" TextColor="white" Opacity="50" FontFamily="Malgun Gothic" FontSize="20"/>
-            <Label Text="Wij versturen hier uw resultaten naar uw email." HorizontalOptions="CenterAndExpand" Margin="20,200,0,0" TextColor="White" Opacity="50" FontFamily="Malgun Gothic" FontSize="20"/>
-            <Entry Placeholder="Vul uw email-adres hier in." HorizontalOptions="CenterAndExpand" BackgroundColor="PowderBlue" VerticalOptions="End" HorizontalTextAlignment="Center" Margin="0" FontFamily="Malgun Gothic" x:Name="email_address" />
-            <Button Text="Verzenden" BackgroundColor="#6CB419" CornerRadius="25" HorizontalOptions="Center" VerticalOptions="EndAndExpand" Padding="100,0" Margin="0,0,0,200" FontFamily="Malgun Gothic" Clicked="requestMailRequest" />
+            <Entry Placeholder="Vul uw email-adres hier in." HorizontalOptions="CenterAndExpand" VerticalOptions="Center" HorizontalTextAlignment="Center" Margin="0" FontFamily="Malgun Gothic" x:Name="email_address" />
+            <Button BorderColor="Black" BorderWidth="1" Text="Verzenden" BackgroundColor="#6CB419" HorizontalOptions="CenterAndExpand" VerticalOptions="End" Padding="100,0" Margin="0,0,0,100" FontFamily="Malgun Gothic" Clicked="requestMailRequest" />
+            <Button BorderColor="Black" BorderWidth="1" Text="Terug" x:Name="Back"  BackgroundColor="#6CB419" VerticalOptions="EndAndExpand" HorizontalOptions="FillAndExpand" Opacity="50" FontFamily="Malgun Gothic"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
