Revert "Commit small design changes"
This reverts commit e2e83d1eb6d3d6262b5d2b4b79fb6fd2be064af8.

--- a/SA/Views/QuestionView.xaml
+++ b/SA/Views/QuestionView.xaml
@@ -11,15 +11,13 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
-            <RowDefinition Height="*"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
+            <RowDefinition Height="200"/>
             <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="10"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -32,19 +30,19 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <Label Text="Question" Grid.Row="1" Grid.ColumnSpan="6" Grid.Column="1" x:Name="Stand" TextColor="White" FontFamily="Malgun Gothic" HorizontalOptions="Center" Margin="0" Scale="1" FontSize="20"/>
+        <Label Text="Question" Grid.Row="1" Grid.ColumnSpan="6" Grid.Column="1" x:Name="Stand" TextColor="White" FontFamily="Malgun Gothic" HorizontalOptions="Center" Margin="0"/>
+
+        <Button Text="Eens" Grid.Row="3" Grid.ColumnSpan="6" Grid.Column="1" Clicked="SaveAnswer" x:Name="eens_pnt" BorderWidth="2" BorderRadius="5" BorderColor="#000000"/>
+        <Button BorderWidth="2" BorderRadius="5" BorderColor="#000000" Grid.Row="2" Grid.ColumnSpan="6" Grid.Column="1" Text="Helemaal eens" Clicked="SaveAnswer" x:Name="hlm_eens_pnt"/>
+        <Button BorderWidth="2" BorderRadius="5" BorderColor="#000000" Grid.Row="4" Grid.ColumnSpan="6" Grid.Column="1" Text="Oneens" Clicked="SaveAnswer" x:Name="oneens_pnt"/>
+        <Button BorderWidth="2" BorderRadius="5" BorderColor="#000000" Grid.Row="5" Grid.ColumnSpan="6" Grid.Column="1" Text="Helemaal oneens" Clicked="SaveAnswer" x:Name="hlm_oneens_pnt"/>
 
         <Image 
             Source="{local:ImageResource ResourceID=SA.Images.Icon_map-political.png}"
-            Grid.Row="2" Grid.Column="2" Scale="2" Grid.ColumnSpan="2"
+            Grid.Row="6" Grid.Column="2" Scale="2" Grid.ColumnSpan="2"
             />
-        
-        <Button BorderWidth="2" BorderRadius="5" BorderColor="#000000" Grid.Row="3" Grid.ColumnSpan="6" Grid.Column="1" Text="Helemaal eens" Clicked="SaveAnswer" x:Name="hlm_eens_pnt"/>
-        <Button Text="Eens" Grid.Row="4" Grid.ColumnSpan="6" Grid.Column="1" Clicked="SaveAnswer" x:Name="eens_pnt" BorderWidth="2" BorderRadius="5" BorderColor="#000000"/>
-        <Button BorderWidth="2" BorderRadius="5" BorderColor="#000000" Grid.Row="5" Grid.ColumnSpan="6" Grid.Column="1" Text="Oneens" Clicked="SaveAnswer" x:Name="oneens_pnt"/>
-        <Button BorderWidth="2" BorderRadius="5" BorderColor="#000000" Grid.Row="6" Grid.ColumnSpan="6" Grid.Column="1" Text="Helemaal oneens" Clicked="SaveAnswer" x:Name="hlm_oneens_pnt" Padding="0"/>
 
-        <Button BorderColor="Black" BorderWidth="1" Text="Vorige" BackgroundColor="#6CB419" Grid.Row="8" Grid.ColumnSpan="3" Grid.Column="1" Clicked="ViewPreviousQuestion" Padding="0" />
-        <Button BorderColor="Black" BorderWidth="1" Text="Volgende" BackgroundColor="#6CB419" x:Name="volgende" Grid.Row="8" Grid.ColumnSpan="3" Grid.Column="4" Clicked="ViewNextQuestion" Padding="0"/>
+        <Button Text="Vorige" BackgroundColor="#6CB419" Grid.Row="7" Grid.ColumnSpan="3" Grid.Column="1" Clicked="ViewPreviousQuestion" />
+        <Button Text="Volgende" BackgroundColor="#6CB419" x:Name="volgende" Grid.Row="7" Grid.ColumnSpan="3" Grid.Column="4" Clicked="ViewNextQuestion" />
     </Grid>
 </ContentPage>
